add Ad, Taxi structures